tests/files/type_checker_tests/should_pass/367.cmdr
//Should type check empty return statements
fn hi() {
	println "hi";
	return;
}
x = hi();