tests/files/type_checker_tests/should_fail/050.cmdr
//Should fail since while condition is not boolean
while ("hello") {
	echo "hi";
}